--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
     rev: 22.12.0
     hooks:
     -   id: black
-        args: [--line-length=79, --target-version=py310]
+        args: [-q, --line-length=79, --target-version=py310]
