--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,11 @@
 repos:
--   repo: https://github.com/psf/black
-    rev: 22.12.0
-    hooks:
-    -   id: black
-        args: [-q, --line-length=79, --target-version=py310]
+    - repo: https://github.com/psf/black
+      rev: 22.12.0
+      hooks:
+          - id: black
+      args: [-q, --line-length=79, --target-version=py310]
+
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: v1.2.0
+      hooks:
+          - id: mypy
