--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
       rev: 22.12.0
       hooks:
           - id: black
-            args: [-q]
+            args: [--target-version=py310]
 
     - repo: https://github.com/pre-commit/mirrors-mypy
       rev: v1.2.0
       hooks:
           - id: mypy
-            args: [--disallow-untyped-defs]
+            args: [--disallow-untyped-defs, --warn-redundant-casts, --warn-unused-ignores, --python-version=3.10, --warn-return-any]
