--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,53 @@
 repos:
-    - repo: https://github.com/psf/black
-      rev: 22.12.0
-      hooks:
-          - id: black
-            args: [--target-version=py310]
+  - repo: https://github.com/psf/black
+    rev: 22.12.0
+    hooks:
+      - id: black
+        args: [--target-version=py310, -l=79]
 
-    - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v1.2.0
-      hooks:
-          - id: mypy
-            args: [--disallow-untyped-defs, --warn-redundant-casts, --warn-unused-ignores, --python-version=3.10]
+  - repo: https://github.com/adamchainz/blacken-docs
+    rev: 1.13.0
+    hooks:
+      - id: blacken-docs
+        additional_dependencies: [black==22.12.0]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.2.0
+    hooks:
+      - id: mypy
+        args:
+          [
+            --disallow-untyped-defs,
+            --warn-redundant-casts,
+            --warn-unused-ignores,
+            --python-version=3.10,
+          ]
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: trailing-whitespace
+        args: []
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: end-of-file-fixer
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        args: [--max-line-length=79]
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: [--atomic, --profile=black]
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.3.1
+    hooks:
+      - id: pyupgrade
+        args: [--py310-plus]
