--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: 22.12.0
     hooks:
       - id: black
-        args: [--target-version=py310, -l=79]
+        args: [--target-version=py310, ]
 
   - repo: https://github.com/adamchainz/blacken-docs
     rev: 1.13.0
@@ -38,7 +38,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=79]
+        args: [--max-line-length=88]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
